--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
 	<title>Charlotte Chalmer</title>
 	<link rel="stylesheet" type="text/css" href="index.css">
 
+	<link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
+
 	<!-- FONTS -->
 	<link href="https://fonts.googleapis.com/css?family=Codystar" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Josefin+Sans" rel="stylesheet">
