adjusting layout of subprojects

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 					<h2 class="portfolio-header header-font">Project Portfolio</h2>
 					<p class="portfolio-header-text body-font">Here, you will find a number of projects that I worked as side projects on and while at CodeCraft. Each project header will either link to the project itself or the GitHub repository depending on the technology used.</p>
 					<div class="portfolio-item">
-						<a href="./projects/html_exercise/index.html" target="_blank"><h3 class="portfolio-item-header header-font">My First Website</h3></a>
+						<a href="./projects/project1.html" target="_blank"><h3 class="portfolio-item-header header-font">My First Website</h3></a>
 						<p class="body-font">This is an "About Me" site that I built having just learned HTML and CSS.  <strong>Technologies used:</strong> HTML &amp; CSS</p>
 					</div>
 					<div class="portfolio-item">
@@ -104,11 +104,11 @@
 						<p class="body-font"> A pong game made with pure CSS animations <strong>Technologies used:</strong> HTML &amp; CSS</p>
 					</div>
 					<div class="portfolio-item">
-						<a href="./projects/bootstrap_build_site/index.html" target="_blank"><h3 class="portfolio-item-header header-font">Rebuild Product Site</h3></a>
+						<a href="./projects/innout.html" target="_blank"><h3 class="portfolio-item-header header-font">Rebuild Product Site</h3></a>
 						<p class="body-font"> During our first week at CodeCraft, we were told to rebuild a products website after having learned Twitter Bootstrap. Living in a state that In-n-Out Burger doesn't call home, I decided to "rebuild" their website. <strong>Technologies used:</strong> HTML, CSS &amp; Twitter Bootstrap</p>
 					</div>
 					<div class="portfolio-item">
-						<a href="./projects/virtual-pet/index.html" target="_blank"><h3 class="portfolio-item-header header-font">Virtual Pet</h3></a>
+						<a href="./projects/virtual-pet.html" target="_blank"><h3 class="portfolio-item-header header-font">Virtual Pet</h3></a>
 						<p class="body-font"> I built this virtual pet simulator at CodeCraft after learning the MVC architectural pattern. <strong>Technologies used:</strong> HTML, CSS &amp; JavaScript/jQuery</p>
 					</div>
 					<div class="portfolio-item">
