--- a/index.html
+++ b/index.html
@@ -23,7 +23,11 @@
 <body>
 	<div class="container-fluid">
 		<div class="row" id="headers">
-			<div class="menu col-xs-3">
+			<div class="col-sm-9 col-sm-push-3 main">
+				<h1>Charlotte Chalmer Taylor</h1>
+				<p class="tag">THINKING OUTSIDE OF THE BOX SINCE 1993</p>
+			</div>
+			<div class="menu col-sm-3 col-sm-pull-9">
 				<div class="menu-content">
 					<a><span class="home-button glyphicon glyphicon-home" aria-hidden="true"></span></a>
 					<div>
@@ -31,8 +35,8 @@
 						<div class="col-xs-12 menu-item"><a id="portfolio-nav">Portfolio</a></div>
 						<div class="col-xs-12 menu-item"><a href="./resume.html">Resume</a></div>
 						<div class="col-xs-12 menu-item"><a id="contact-nav">Contact <div class="glyphicon glyphicon-triangle-bottom" aria-hidden="true"></div></a></div>
-						<div class="contact-div col-xs-12 hide" >
-							<div class="contact-item linked-contact"><i class="fa fa-envelope-o" aria-hidden="true"></i><a class="email-link" href="mailto:charlotte.taylor7693@gmail.com">charlotte.taylor7693@gmail.com</a></div>
+						<div class="contact-div col-xs-6 col-xs-offset-3 col-sm-12 col-sm-offset-0 hide" >
+							<div class="contact-item linked-contact linked-contact-first"><i class="fa fa-envelope-o" aria-hidden="true"></i><a class="email-link" href="mailto:charlotte.taylor7693@gmail.com">charlotte.taylor7693@gmail.com</a></div>
 							<div class="contact-item linked-contact"><i class="fa fa-linkedin-square" aria-hidden="true"></i><a href="https://www.linkedin.com/in/charlottetaylor7693">LinkedIn</a></div>
 							<div class="contact-item linked-contact"><i class="fa fa-github" aria-hidden="true"></i><a href="https://github.com/charlottechalmer">GitHub</a></div>
 							<div class="contact-item linked-contact"><i class="fa fa-twitter" aria-hidden="true"></i><a href="https://twitter.com/butternut_Shash">Twitter</a></div>
@@ -41,13 +45,9 @@
 				</div>
 				<p class="copyright">&copy; Charlotte Chalmer Taylor 2016 </p>
 			</div>
-			<div class="col-xs-9 main">
-				<h1>Charlotte Chalmer Taylor</h1>
-				<p class="tag">THINKING OUTSIDE OF THE BOX SINCE 1993</p>
-			</div>
 			<!-- AUTO CONTENT -->
-			<div class="col-xs-9 content auto-content-div" style="display: block">
-				<div class="col-xs-8 col-xs-offset-2 intro">
+			<div class="col-sm-9 col-sm-push-3 content auto-content-div" style="display: block">
+				<div class="col-xs-8 col-xs-offset-1 col-md-offset-2 intro">
 					<div class="col-xs-4"><img src="images/charlotte.jpg"></div>
 					<ul class="random-info col-xs-8">
 						<li>Code Craft School of Technology Graduate</li>
@@ -64,7 +64,7 @@
 				</div>
 			</div>
 			<!-- ABOUT ME CONTENT -->
-			<div class="col-xs-9 content about-me-div" style="display: none">
+			<div class="col-sm-9 col-sm-push-3 content about-me-div" style="display: none">
 				<img src="images/aboutme.jpg">
 				<p class="caption body-font"><em>My project planning for the CodeCraft hackathon</em></p>
 				<div class="col-xs-8 col-xs-offset-2 about-me">
@@ -91,7 +91,7 @@
 				</div>
 			</div>
 			<!-- PORTFOLIO CONTENT -->
-			<div class="col-xs-9 content portfolio-div" style="display: none">
+			<div class="col-sm-9 col-sm-push-3 content portfolio-div" style="display: none">
 				<div class="portfolio">
 					<h2 class="portfolio-header header-font">Project Portfolio</h2>
 					<p class="portfolio-header-text body-font">Here, you will find a number of projects that I worked as side projects on and while at CodeCraft. Each project header will either link to the project itself or the GitHub repository depending on the technology used.</p>
