--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 			</div>
 			<!-- AUTO CONTENT -->
 			<div class="col-sm-9 col-sm-push-3 content auto-content-div" style="display: block">
-				<div class="col-xs-8 col-xs-offset-1 col-md-offset-2 intro">
+				<div class="col-xs-8 col-xs-offset-1 intro">
 					<div class="col-xs-4"><img src="images/charlotte.jpg"></div>
 					<ul class="random-info col-xs-8">
 						<li>Code Craft School of Technology Graduate</li>
