--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 				<div class="col-xs-8 col-xs-offset-2 about-me">
 				<h2 class="header-font">About Me</h2>
 				<p class="about-me-text body-font">
-					<p class="header-first body-font"><em>Hi! I'm Charlotte. I love building things and meeting new people. I have found a passion in web development and am exited to see where this path is going to take me.</em></p>
+					<p class="header-first body-font"><em>Hi! I'm Charlotte. I love building things and meeting new people. I have found a passion in web development and am excited to see where this path is going to take me.</em></p>
 					<p class="body-font">
 					After graduating from a small liberal arts school with a bachelor's degree in psychology, I decided to attend <a href="https://www.codecraftschool.com/">CodeCraft School of Technology</a>, a web-development bootcamp that focuses on the MEAN stack. I have graduated with a professional certification in full-stack web development.
 					</p>
