changed heder font

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 	<link href="https://fonts.googleapis.com/css?family=Codystar" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Josefin+Sans" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Londrina+Outline" rel="stylesheet">
-	<link href="https://fonts.googleapis.com/css?family=Raleway+Dots" rel="stylesheet">
-
+	<link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
+	
 	<link href="./bower_components/lightbox2/dist/css/lightbox.css" rel="stylesheet">
 
 
