adding plain text resume to resume page

--- a/resume.html
+++ b/resume.html
@@ -575,6 +575,7 @@
 			<div class="smallBlue"></div>
 			<div class="whiteLine"></div>
 			<div class="bigBlue"> 
+				<p class="plaintext-link"><a href="charlotte_taylor_resume.pdf" onclick="window.open('charlotte_taylor_resume.pdf', '_blank', 'fullscreen=yes'); return false;">view plain text resume</a></p>
 				<p class="copyright">&copy; Charlotte Chalmer Taylor 2016 </p> 
 			</div>
 		</div>
