--- a/resume.html
+++ b/resume.html
@@ -19,7 +19,7 @@
 		<div class="container-fluid">
 			<div class="row">
 				<div class="col-md-9">
-					<h2><span>C</span>HARLOTTE <span>T</span>AYLOR</h2> <small> Web Developer with hands-on experience in testing, building, and deploying full-stack web applications. A supportive team player and enthusiastic leader with exceptional interpersonal skills and an aptitude for learning new material. </small>
+					<h2><span>C</span>HARLOTTE <span>C</span>. <span>T</span>AYLOR</h2> <small> Web Developer with hands-on experience in testing, building, and deploying full-stack web applications. A supportive team player and enthusiastic leader with exceptional interpersonal skills and an aptitude for learning new material. </small>
 				</div>
 
 				<div class="col-md-3">
