changing Current href so links to heroku hosted site

--- a/index.html
+++ b/index.html
@@ -126,10 +126,10 @@
 						<a href="./projects/sassy-potions.png" data-lightbox="image-2" data-title="Sassy Potions Blog" class="pic-link body-font">Click to Preview</a>
 					</div>
 					<div class="portfolio-item">
-						<a href="https://github.com/MrWharfsnort/hackathon-project" target="_blank"><h3 class="portfolio-item-header header-font">Current- Hackathon Project</h3></a>
+						<a href="https://squigpig.herokuapp.com/" target="_blank"><h3 class="portfolio-item-header header-font">Current- Hackathon Project</h3></a>
 						<p class="body-font"> A four day hackathon project through CodeCraft. combining psychology and web development. We decided to build a program that tracks productivity based on the psychological concept of "Flow" using a timer similar to a pomodoro timer that prompts a user to take a break. The user is then prompted with a pre and post-break survey to get data on their productivity. <strong>Technologies used:</strong> HTML, CSS, JavaScript/jQuery, Node.js/Express &amp; Mongoose/MongoDB</p>
 
-						<a href="./projects/current/current-first-pg.png" data-lightbox="image-3" data-title="Current first-page" class="pic-link body-font">First-page image</a>
+						<!-- <a href="./projects/current/current-first-pg.png" data-lightbox="image-3" data-title="Current first-page" class="pic-link body-font">First-page image</a>
 						<a href="./projects/current/current-psych-btns.png" data-lightbox="image-3" data-title="Current center of first-page" class="pic-link body-font">First-page psychology buttons image</a>
 						<a href="./projects/current/current-first-pg-bottom.png" data-lightbox="image-3" data-title="Current bottom of first-page" class="pic-link body-font">First-page bottom image</a>
 						<a href="./projects/current/current-about.png" data-lightbox="image-3" data-title="About us" class="pic-link body-font">About us image</a>
@@ -137,7 +137,7 @@
 						<a href="./projects/current/current-login.png" data-lightbox="image-3" data-title="Current login" class="pic-link body-font">Login image</a>
 						<a href="./projects/current/current-pre-survey.png" data-lightbox="image-3" data-title="Pre-break survey" class="pic-link body-font">Pre-break survey image</a>
 						<a href="./projects/current/current-post-survey.png" data-lightbox="image-3" data-title="Post-break survey" class="pic-link body-font">Post-break image</a>
-						<a href="./projects/current/current-flow.png" data-lightbox="image-3" data-title="Flow data display" class="pic-link body-font">Flow data display image</a>
+						<a href="./projects/current/current-flow.png" data-lightbox="image-3" data-title="Flow data display" class="pic-link body-font">Flow data display image</a> -->
 					</div>
 					<div class="portfolio-item">
 						<a href="https://github.com/charlottechalmer/angular-heroes-league-routes" target="_blank"><h3 class="portfolio-item-header header-font">Angular 2 Heroes</h3></a>
