changed preview links on portfolio

--- a/index.html
+++ b/index.html
@@ -116,14 +116,14 @@
 						<a href="https://github.com/charlottechalmer/School-API-Assignment" target="_blank"><h3 class="portfolio-item-header header-font">School API</h3></a>
 						<p class="body-font"> My first assignment using node.js! This app is a single-user school portal simulator that allows a student to register for a class, check grades and homework completion / change completion status. <strong>Technologies used:</strong> HTML, CSS, JavaScript/jQuery, &amp; Node.js/Express</p>
 
-						<a href="./projects/school-API-modal.png" data-lightbox="image-1" data-title="School API" class="pic-link body-font">Click to Preview</a>
+						<a href="./projects/school-API-modal.png" data-lightbox="image-1" data-title="School API" class="pic-link body-font">Click to view image of student portal</a>
       
 					</div>					
 					<div class="portfolio-item">
 						<a href="https://github.com/charlottechalmer/sassy-potions-blog-2-" target="_blank"><h3 class="portfolio-item-header header-font">Sassy Potions Blog</h3></a>
 						<p class="body-font"> An... interesting assignment-- allows a user to write the ingredients for a "sassy potion", delete ingredients and edit ingredients. <strong>Technologies used:</strong> HTML, CSS, JavaScript/jQuery, Node.js/Express &amp; Mongoose/MongoDB</p>
 
-						<a href="./projects/sassy-potions.png" data-lightbox="image-2" data-title="Sassy Potions Blog" class="pic-link body-font">Click to Preview</a>
+						<a href="./projects/sassy-potions.png" data-lightbox="image-2" data-title="Sassy Potions Blog" class="pic-link body-font">Click to view image of potion examples</a>
 					</div>
 					<div class="portfolio-item">
 						<a href="https://squigpig.herokuapp.com/" target="_blank"><h3 class="portfolio-item-header header-font">Current- Hackathon Project</h3></a>
