added 'hosted on heroku' to Current and Poll Arise

--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
 					</div>
 					<div class="portfolio-item">
 						<a href="https://squigpig.herokuapp.com/" target="_blank"><h3 class="portfolio-item-header header-font">Current- Hackathon Project</h3></a>
-						<p class="body-font"> A four day hackathon project through CodeCraft. combining psychology and web development. We decided to build a program that tracks productivity based on the psychological concept of "Flow" using a timer similar to a pomodoro timer that prompts a user to take a break. The user is then prompted with a pre and post-break survey to get data on their productivity. <strong>Technologies used:</strong> HTML, CSS, JavaScript/jQuery, Node.js/Express &amp; Mongoose/MongoDB</p>
+						<p class="body-font"> A four day hackathon project through CodeCraft. combining psychology and web development. We decided to build a program that tracks productivity based on the psychological concept of "Flow" using a timer similar to a pomodoro timer that prompts a user to take a break. The user is then prompted with a pre and post-break survey to get data on their productivity. <strong>Technologies used:</strong> HTML, CSS, JavaScript/jQuery, Node.js/Express &amp; Mongoose/MongoDB. Hosted on Heroku</p>
 
 						<!-- <a href="./projects/current/current-first-pg.png" data-lightbox="image-3" data-title="Current first-page" class="pic-link body-font">First-page image</a>
 						<a href="./projects/current/current-psych-btns.png" data-lightbox="image-3" data-title="Current center of first-page" class="pic-link body-font">First-page psychology buttons image</a>
@@ -150,7 +150,7 @@
 					</div>
 					<div class="portfolio-item">
 						<a href="https://www.pollarise.co" target="_blank"><h3 class="portfolio-item-header header-font">Poll Arise</h3></a>
-						<p class="body-font"> My final project while at CodeCraft that utlizes the intersection between psychology and web development-- It is a twitter scraper that utilizes a NLP API and IBM Watson service to run a personality analysis on a user and then outputs which politicians the user is most similar to and most different from.  <strong>Technologies used:</strong> Pug(Jade), HTML, CSS, JavaScript/jQuery, Node.js, Mongoose/MongoDB, IBM Watson Personality Insights, Twitter API, Angular2 templating to retrieve user tweets.</p>
+						<p class="body-font"> My final project while at CodeCraft that utlizes the intersection between psychology and web development-- It is a twitter scraper that utilizes a NLP API and IBM Watson service to run a personality analysis on a user and then outputs which politicians the user is most similar to and most different from.  <strong>Technologies used:</strong> Pug(Jade), HTML, CSS, JavaScript/jQuery, Node.js, Mongoose/MongoDB, IBM Watson Personality Insights, Twitter API, Angular2 templating to retrieve user tweets. Hosted on Heroku</p>
 					</div>
 				</div>
 			</div>
