added projects, adjusted contact

--- a/resume.html
+++ b/resume.html
@@ -19,7 +19,7 @@
 		<div class="container-fluid">
 			<div class="row">
 				<div class="col-md-9">
-					<h2><span>C</span>HARLOTTE <span>C</span>. <span>T</span>AYLOR</h2> <small> Web Developer with hands-on experience in testing, building, and deploying full-stack web applications. A supportive team player and enthusiastic leader with exceptional interpersonal skills and an aptitude for learning new material. </small>
+					<h2><span>C</span>HARLOTTE <span>C</span>. <span>T</span>AYLOR</h2> <small> Web Developer with hands-on experience in testing, building, and deploying full-stack web applications. A supportive team player and enthusiastic leader with exceptional interpersonal skills and an aptitude for learning new material who excels under pressure. </small>
 				</div>
 
 				<div class="col-md-3">
@@ -44,11 +44,10 @@
 			<table class="rightColumn col-xs-12 col-md-3 col-md-push-9">
 				<tr>
 					<td>
-						<h4 class="border">STRENGTHS</h4>
-
-						<ul>
-							<li>Excellent written and verbal communication skills</li>
-							<li> Able to work independently and in a team, and excel under pressure</li>
+						<h4 class="border">PROJECTS</h4>
+						<ul class="project-list">
+							<li><a href="www.pollarise.co">Poll Arise</a>: Outputs which politicians a user is most and least similar to based on their Twitter presence. Technologies used: Pug, CSS, JavaScript, Node.js, MongoDB, IBM Watson, Twitter API, Angular2 templating</li>
+							<li><a href="http://papayawhip.herokuapp.com/">Current</a>: Interactive productivity tracker and pomodoro timer that is based on the psychological concept of “flow”. User is prompted to take breaks and productivity data is collected through surveys. Technologies used: HTML, CSS, JavaScript, Node.js, MongoDB.</li>
 						</ul>
 					</td>
 				</tr>
@@ -365,13 +364,13 @@
 						</div>
 					</td>
 				</tr>
-				<tr>
+				<!-- <tr>
 					<td>
 						<p class="scanText">SCAN BELOW TO CONNECT TO GITHUB</p>
 						<img id="githubQR" src='https://chart.googleapis.com/chart?cht=qr&chl=https%3A%2F%2Fgithub.com%2Fcharlottechalmer&chs=180x180&choe=UTF-8&chld=L|2' alt='githubQR'>
 						<p class="ref">References available upon request</p>
 					</td>
-				</tr>
+				</tr> -->
 			</table>
 		
 	<!-- RELEVANT EXPERIENCE (LEFT COLUMN) -->
@@ -386,7 +385,7 @@
 					<tr>
 						<td>
 							<h5>CodeCraft School of Technology</h5>
-							<h6 class="head2">Full-Time Full-Stack Web Development Student</h6>
+							<h6 class="head2">Software Apprentice</h6>
 						</td>
 						<td>
 							<p>Boulder, CO</p>
@@ -395,12 +394,11 @@
 					</tr>
 					<tr>
 						<td colspan="2"> 
-							<h6 class="desc">A 10-week immersive training program offering a professional certificate in full-stack web development</h6>
+							<h6 class="desc">An immersive JavaScript training program with over 700 hours of project-based full-stack web development</h6>
 							<ul>
-								<li>Learned MEAN stack and other development tools while creating projects individually and collaboratively</li>
-								<li>Exceptionally creative and driven Web Developer able to build a web presence using the MEAN stack</li>
-								<li>Designed and created fully-functioning projects from wireframe stage to deployment using object-oriented programming, MVC framework, and functional programming</li>
-								<li>Developed final project incorporating entire MEAN stack</li>
+								<li>Learned MEAN stack and other front-end and back-end development tools while creating projects individually and collaboratively</li>
+								<li>Designed and created fully-functioning and exceptionally creative projects from wireframe stage to deployment using agile principles, object-oriented programming, MVC framework, and functional programming</li>
+								<li>•	Developed a dynamic web application, Poll Arise, built on my passion for psychology. Developed the minimal viable product incorporating the MEAN stack, IBM Watson services, and Twitter API. Hosted by Heroku at www.pollarise.co</li>
 							</ul>
 						</td>
 					</tr>
